--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
-    "node-uuid": "^1.4.3"
+    "github-api": "^0.10.4",
+    "node-uuid": "^1.4.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
