--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Best game ever!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "OnSenFout",
   "license": "MIT",
@@ -18,5 +19,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
